--- a/workbench/artgrafii/pinfo/composer.json
+++ b/workbench/artgrafii/pinfo/composer.json
@@ -9,8 +9,7 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "illuminate/support": "4.0.x",
-		"illuminate/database": "4.0.*"
+        "illuminate/support": "v4.0.5"
     },
     "require-dev": {
 		"mockery/mockery": "0.7.2", 
