--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,11 @@
 			"app/database/migrations",
 			"app/database/seeds",
 			"app/tests/TestCase.php"
-		]
+		],
+        "psr-0" : { 
+            "Program" : "app/components/"
+        }
+        
 	},
 	"scripts": {
 		"post-install-cmd": [
